--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+html,
+body {
   color: white;
+  background-color: mediumslateblue;
+  font-family: monospace;
+  margin-top: 40px;
+}
+h1 {
+  color: black;
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin: 0 20px;
+}
+.App{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+} 
+
+/* Logo de Wizeline*/
+.logo-container {
+  width: 100%;
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.wizeline-logo {
+  width: 100px;
+  height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*Todo list*/
+
+.main-container{
+  width:600px;
+  min-height: 500px;
+  background-color: pink;
+  padding: 25px;
+  border-radius: 25px;
+  margin: 30px;
+}
+.task-container{
+  width: 500px;
+  min-height: 65px;
+  color: gray;
+  margin: 5px 30px;
+  padding: 8px 15px 8px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 7px;
+  border: 1px solid gray;
+  cursor: pointer;
+  background-color: white;
+}
+
+.task-text {
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  overflow-wrap: anywhere;
+}
+.task-icon {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+.task-container.complete {
+  background-color: aquamarine;
+  text-decoration: line-through;
+}
+/*Form structure*/
+
+.task-form {
+ display: flex;
+ flex-wrap: wrap;
+ align-items: center;
+ justify-content: center;
+}
+
+.task-input {
+width: 250px;
+font-size: 18px;
+background-color: white;
+margin-top: 20px;
+padding: 14px 32px 14px 16px;
+border-radius: 4px 0 0 4px;
+border: 2px solid slateblue;
+outline: none;
+}
+
+/* Add button*/
+
+.task-button {
+  margin-top: 20px;
+  padding: 16px;
+  font-size: 18px;
+  font-family: Roboto, sans-serif;
+  border-radius: 0 4px 4px 0;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  background: mediumslateblue;
+  color: white;
+  text-transform: capitalize;
+}
+
+.task-list-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 25px;
+  width: 500px;
 }
